--- a/k8s/templates/extensions/pipeline-elements/sources-watertank-simulator-deployment.yaml
+++ b/k8s/templates/extensions/pipeline-elements/sources-watertank-simulator-deployment.yaml
@@ -13,6 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+{{- if (eq .Values.deployment "full") }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -28,9 +29,6 @@ spec:
         app: sources-watertank-simulator
     spec:
       initContainers:
-        - name: init-wait-consul
-          image: alpine
-          command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 consul 8600 && exit 0 || sleep 3; done; exit 1"]
         - name: init-wait-kafka
           image: alpine
           command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 kafka 9092 && exit 0 || sleep 3; done; exit 1"]
@@ -40,3 +38,4 @@ spec:
           imagePullPolicy: {{ .Values.pullPolicy }}
           ports:
             - containerPort: 8090
+{{- end }}
