--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -16,6 +16,8 @@
 # lite or full (default: lite)
 deployment: lite
 pullPolicy: "Always"
+persistentVolumeReclaimPolicy: "Retain"
+persistentVolumeAccessModes: "ReadWriteOnce"
 
 streampipes:
   version: "0.68.0-SNAPSHOT"
@@ -29,7 +31,8 @@ external:
   kafkaVersion: 2.2.0
   zookeeperVersion: 3.4.13
   influxdbVersion: 1.7
-  iotdbVersion: latest
-  kibanaVersion: 6.2.3
-  elasticsearchVersion: 6.2.3
-  redisVersion: latest
+
+# NOTE: Local testing only!
+# minikube start --mount-string ${HOME}/streampipes-k8s:/streampipes-k8s --mount --memory=4g --cpus=4
+# Specify minikube directory:
+hostPath: "/streampipes-k8s"
