--- a/pom.xml
+++ b/pom.xml
@@ -98,8 +98,8 @@
         <snakeyaml.version>1.26</snakeyaml.version>
         <snappy-java.version>1.1.7.2</snappy-java.version>
         <spark.version>2.1.2</spark.version>
-        <spring.version>5.2.8.RELEASE</spring.version>
-        <spring-boot.version>2.3.3.RELEASE</spring-boot.version>
+        <spring.version>5.3.2</spring.version>
+        <spring-boot.version>2.4.1</spring-boot.version>
         <type-parser.version>0.6.0</type-parser.version>
         <underscore.version>1.47</underscore.version>
         <wildfly-common.version>1.5.2.Final</wildfly-common.version>
