--- a/streampipes-container/pom.xml
+++ b/streampipes-container/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>streampipes-serializers</artifactId>
 			<version>0.68.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.streampipes</groupId>
+			<artifactId>streampipes-rest-shared</artifactId>
+			<version>0.68.0-SNAPSHOT</version>
+		</dependency>
+
 
 		<!-- External dependencies -->
 		<dependency>
