--- a/streampipes-connect-container/pom.xml
+++ b/streampipes-connect-container/pom.xml
@@ -51,7 +51,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
-            <artifactId>streampipes-serializers</artifactId>
+            <artifactId>streampipes-serializers-json</artifactId>
             <version>0.68.0-SNAPSHOT</version>
         </dependency>
 
