--- a/streampipes-rest-shared/pom.xml
+++ b/streampipes-rest-shared/pom.xml
@@ -42,7 +42,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.streampipes</groupId>
-			<artifactId>streampipes-serializers</artifactId>
+			<artifactId>streampipes-serializers-json</artifactId>
+			<version>0.68.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.streampipes</groupId>
+			<artifactId>streampipes-serializers-jsonld</artifactId>
 			<version>0.68.0-SNAPSHOT</version>
 		</dependency>
 
