--- a/streampipes-storage-rdf4j/pom.xml
+++ b/streampipes-storage-rdf4j/pom.xml
@@ -46,7 +46,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
-            <artifactId>streampipes-serializers</artifactId>
+            <artifactId>streampipes-serializers-jsonld</artifactId>
             <version>0.68.0-SNAPSHOT</version>
         </dependency>
         <dependency>
