--- a/pom.xml
+++ b/pom.xml
@@ -49,14 +49,14 @@
         <commons-logging.version>1.2</commons-logging.version>
         <consul-client.version>1.3.9</consul-client.version>
         <elasticsearch.version>6.6.2</elasticsearch.version>
-        <empire-rdf4j.version>1.9.13</empire-rdf4j.version>
+        <empire-rdf4j.version>1.9.14</empire-rdf4j.version>
         <flink.version>1.9.1</flink.version>
         <fogsy-qudt.version>1.0</fogsy-qudt.version>
         <fst.version>2.56</fst.version>
         <geojson-jackson.version>1.8</geojson-jackson.version>
         <guava.version>27.1-jre</guava.version>
         <hibernate-validator.version>6.1.5.Final</hibernate-validator.version>
-        <httpclient.version>4.5.10</httpclient.version>
+        <httpclient.version>4.5.13</httpclient.version>
         <httpcore.version>4.4.9</httpcore.version>
         <httpcore-osgi.version>4.4.9</httpcore-osgi.version>
         <influxdb.version>2.16</influxdb.version>
@@ -89,7 +89,7 @@
         <okhttp.version>3.12.2</okhttp.version>
         <plexus-component-annotations.version>1.6</plexus-component-annotations.version>
         <plexus-utils.version>3.0.22</plexus-utils.version>
-        <rdf4j.version>3.1.0</rdf4j.version>
+        <rdf4j.version>3.5.0</rdf4j.version>
         <rendersnake.version>1.8</rendersnake.version>
         <retrofit.version>2.5.0</retrofit.version>
         <shiro.version>1.2.3</shiro.version>
@@ -476,6 +476,11 @@
             </dependency>
             <dependency>
                 <groupId>org.eclipse.rdf4j</groupId>
+                <artifactId>rdf4j-query</artifactId>
+                <version>${rdf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.rdf4j</groupId>
                 <artifactId>rdf4j-queryresultio-api</artifactId>
                 <version>${rdf4j.version}</version>
             </dependency>
@@ -487,6 +492,11 @@
             <dependency>
                 <groupId>org.eclipse.rdf4j</groupId>
                 <artifactId>rdf4j-repository-http</artifactId>
+                <version>${rdf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.rdf4j</groupId>
+                <artifactId>rdf4j-repository-api</artifactId>
                 <version>${rdf4j.version}</version>
             </dependency>
             <dependency>
@@ -732,6 +742,11 @@
             <dependency>
                 <groupId>io.fogsy</groupId>
                 <artifactId>empire-annotations</artifactId>
+                <version>${empire-rdf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.fogsy</groupId>
+                <artifactId>empire-api</artifactId>
                 <version>${empire-rdf4j.version}</version>
             </dependency>
             <dependency>
