--- a/streampipes-model/pom.xml
+++ b/streampipes-model/pom.xml
@@ -53,6 +53,10 @@
             <artifactId>jackson-annotations</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
@@ -66,15 +70,11 @@
         </dependency>
         <dependency>
             <groupId>io.fogsy</groupId>
-            <artifactId>empire-annotations</artifactId>
+            <artifactId>empire-api</artifactId>
         </dependency>
         <dependency>
             <groupId>io.fogsy</groupId>
-            <artifactId>empire-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient-osgi</artifactId>
+            <artifactId>empire-annotations</artifactId>
         </dependency>
 
         <!-- Test dependencies -->
