--- a/streampipes-platform-services/pom.xml
+++ b/streampipes-platform-services/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>streampipes-storage-api</artifactId>
             <version>0.68.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-rest</artifactId>
+            <version>0.68.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
