--- a/streampipes-backend/src/main/resources/shiro.ini
+++ b/streampipes-backend/src/main/resources/shiro.ini
@@ -72,5 +72,5 @@ securityManager.rememberMeManager.cookie.maxAge = 1000000000
 /api/v2/connect/*/master/sources/*/streams = anon
 /api/v2/connect/*/master/sources/*/streams/* = anon
 /api/v2/connect/*/master/resolvable/*/configurations = anon
-/api/** = customFilter
-/** = customFilter
+/api/** = authcBearer, customFilter
+/** = authcBearer, customFilter
