--- a/streampipes-model-client/pom.xml
+++ b/streampipes-model-client/pom.xml
@@ -37,6 +37,10 @@
 
 		<!-- External dependencies -->
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 		</dependency>
@@ -51,7 +55,7 @@
 			<plugin>
 				<groupId>cz.habarta.typescript-generator</groupId>
 				<artifactId>typescript-generator-maven-plugin</artifactId>
-				<version>2.24.612</version>
+				<version>2.27.744</version>
 				<executions>
 					<execution>
 						<id>generate</id>
