[WIP] store node description in couchdb, add CRUD operation on description, extent frontend node configuration view

--- a/streampipes-backend/src/main/resources/shiro.ini
+++ b/streampipes-backend/src/main/resources/shiro.ini
@@ -67,6 +67,8 @@ securityManager.rememberMeManager.cookie.maxAge = 1000000000
 /api/v2/users/*/labeling/category/* = anon
 /api/v2/users/*/labeling/* = anon
 /api/v2/users/*/labeling = anon
+/api/v2/users/*/nodes = anon
+/api/v2/users/*/nodes/* = anon
 /api/v2/connect/*/master/administration = anon
 /api/v2/connect/*/master/sources/* = anon
 /api/v2/connect/*/master/sources/*/streams = anon
