--- a/ui/package.json
+++ b/ui/package.json
@@ -40,7 +40,7 @@
     "angular-datatables": "9.0.2",
     "angular-gridster2": "8.3.0",
     "angular-loading-bar": "0.8.0",
-    "angular-material-icons": "0.4.0",
+    "angular-material-icons": "^0.4.0",
     "angular-plotly.js": "1.5.0",
     "angular-tree-component": "8.5.6",
     "angular-ui-tree": "2.9.0",
@@ -63,7 +63,7 @@
     "konva": "3.2.4",
     "leaflet": "1.6.0",
     "lodash": "4.17.20",
-    "material-design-icons": "3.0.1",
+    "material-design-icons": "^3.0.1",
     "ng-file-upload": "9.0.13",
     "ng-pick-datetime": "7.0.0",
     "ng-prettyjson": "0.1.8",
