--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,8 @@
         <amqp-client.version>4.1.0</amqp-client.version>
         <animal-sniffer-annotations.version>1.17</animal-sniffer-annotations.version>
         <boofcv.version>0.33</boofcv.version>
-        <bcprov.version>1.61</bcprov.version>
+        <bcprov.version>1.66</bcprov.version>
+        <bcpkix.version>1.66</bcpkix.version>
         <classindex.version>3.9</classindex.version>
         <checker-qual.version>2.5.2</checker-qual.version>
         <commons-math3.version>3.6.1</commons-math3.version>
@@ -88,8 +89,8 @@
         <javax-websocket-client-api.version>1.1</javax-websocket-client-api.version>
         <jsrosbridge.version>0.2.0</jsrosbridge.version>
         <jedis.version>3.3.0</jedis.version>
+        <j2objc-annotations.version>1.3</j2objc-annotations.version>
         <quartz.version>2.3.2</quartz.version>
-
         <language-detector.version>0.6</language-detector.version>
         <log4j-to-slf4j.version>2.8.2</log4j-to-slf4j.version>
         <mailapi.version>1.4.3</mailapi.version>
@@ -98,7 +99,7 @@
         <okhttp.version>3.13.1</okhttp.version>
         <opennlp.version>1.9.0</opennlp.version>
         <postgresql.version>42.2.2</postgresql.version>
-        <pulsar.version>2.4.1</pulsar.version>
+        <pulsar.version>2.7.0</pulsar.version>
         <scala-lang.version>2.11.12</scala-lang.version>
         <scala-parser-combinators.version>1.1.1</scala-parser-combinators.version>
         <slack-api.version>0.5.1</slack-api.version>
@@ -133,7 +134,6 @@
         <opencsv.version>4.6</opencsv.version>
         <plc4x.version>0.8.0-SNAPSHOT</plc4x.version>
         <protobuf.version>3.6.1</protobuf.version>
-        <pulsar.version>2.5.1</pulsar.version>
         <slack.version>1.2.0</slack.version>
         <poiji.version>2.7.0</poiji.version>
 
@@ -151,6 +151,11 @@
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-jdk15on</artifactId>
                 <version>${bcprov.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcpkix-jdk15on</artifactId>
+                <version>${bcpkix.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.checkerframework</groupId>
@@ -240,6 +245,11 @@
                 <groupId>com.github.shyiko</groupId>
                 <artifactId>mysql-binlog-connector-java</artifactId>
                 <version>${mysql-binlog-connector.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.j2objc</groupId>
+                <artifactId>j2objc-annotations</artifactId>
+                <version>${j2objc-annotations.version}</version>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
