[STREAMPIPES-280] Extract data explorer queries into own module and individual classes

--- a/pom.xml
+++ b/pom.xml
@@ -911,6 +911,7 @@
         <module>streampipes-wrapper-siddhi</module>
         <module>streampipes-wrapper-spark</module>
         <module>streampipes-wrapper-standalone</module>
+        <module>streampipes-data-explorer</module>
     </modules>
 
     <profiles>
