--- a/streampipes-rest/pom.xml
+++ b/streampipes-rest/pom.xml
@@ -47,6 +47,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-data-explorer</artifactId>
+            <version>0.68.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-measurement-units</artifactId>
             <version>0.68.0-SNAPSHOT</version>
         </dependency>
