--- a/ui/package.json
+++ b/ui/package.json
@@ -52,6 +52,8 @@
     "dagre": "0.8.4",
     "datatables.net": "1.10.20",
     "datatables.net-dt": "1.10.21",
+    "echarts": "^5.0.1",
+    "echarts-wordcloud": "^2.0.0",
     "fast-json-patch": "2.1.0",
     "file-saver": "1.3.8",
     "jquery": "2.1.3",
@@ -71,6 +73,7 @@
     "ng2-dragula": "1.5.0",
     "ngx-auto-scroll": "^1.1.0",
     "ngx-color-picker": "9.0.0",
+    "ngx-echarts": "^6.0.0",
     "ngx-quill": "12.0.1",
     "ngx-showdown": "5.1.0",
     "plotly.js": "1.52.2",
@@ -118,6 +121,7 @@
     "node-sass": "^4.14.1",
     "prettier": "1.14.2",
     "raw-loader": "^0.5.1",
+    "resize-observer-polyfill": "^1.5.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.23.1",
     "to-string-loader": "^1.1.5",
