--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,7 @@
         <netty.version>4.1.39.Final</netty.version>
         <nimbus-jose-jwt.version>4.41.1</nimbus-jose-jwt.version>
         <opencsv.version>4.6</opencsv.version>
-        <plc4x.version>0.8.0-SNAPSHOT</plc4x.version>
+        <plc4x.version>0.8.0</plc4x.version>
         <protobuf.version>3.6.1</protobuf.version>
         <slack.version>1.2.0</slack.version>
         <poiji.version>2.7.0</poiji.version>
