--- a/streampipes-rest/pom.xml
+++ b/streampipes-rest/pom.xml
@@ -97,6 +97,10 @@
             <artifactId>retrofit</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
         </dependency>
