--- a/ui/package.json
+++ b/ui/package.json
@@ -76,6 +76,7 @@
     "ngx-echarts": "^6.0.0",
     "ngx-quill": "12.0.1",
     "ngx-showdown": "5.1.0",
+    "path": "^0.12.7",
     "plotly.js": "1.52.2",
     "prismjs": "1.16.0",
     "quill": "1.3.7",
@@ -84,6 +85,7 @@
     "shepherd.js": "2.4.0",
     "showdown": "1.9.1",
     "systemjs": "0.21.6",
+    "swagger-ui": "^3.42.0",
     "tslib": "^2.0.0",
     "zone.js": "0.10.3"
   },
