--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <httpcore.version>4.4.9</httpcore.version>
         <httpcore-osgi.version>4.4.9</httpcore-osgi.version>
         <influxdb.version>2.21</influxdb.version>
-        <jackson.version>2.10.0</jackson.version>
+        <jackson.version>2.12.1</jackson.version>
         <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
         <jakarta-validation.version>2.0.2</jakarta-validation.version>
         <javapoet.version>1.6.1</javapoet.version>
@@ -73,7 +73,7 @@
         <javassist.version>3.19.0-GA</javassist.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
         <jboss-logging.version>3.4.0.Final</jboss-logging.version>
-        <jersey.version>2.30.1</jersey.version>
+        <jersey.version>2.33</jersey.version>
         <jetty.version>9.4.19.v20190610</jetty.version>
         <jgrapht.version>1.3.1</jgrapht.version>
         <json-path.version>3.1.0</json-path.version>
@@ -168,6 +168,16 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jdk8</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.module</groupId>
+                <artifactId>jackson-module-jaxb-annotations</artifactId>
                 <version>${jackson.version}</version>
             </dependency>
             <dependency>
