--- a/pom.xml
+++ b/pom.xml
@@ -660,7 +660,7 @@
             <dependency>
                 <groupId>org.glassfish.jaxb</groupId>
                 <artifactId>jaxb-runtime</artifactId>
-                <version>2.4.0-b180725.0644</version>
+                <version>2.3.3</version>
             </dependency>
 
         </dependencies>
