--- a/streampipes-backend/src/main/resources/shiro.ini
+++ b/streampipes-backend/src/main/resources/shiro.ini
@@ -68,9 +68,7 @@ securityManager.rememberMeManager.cookie.maxAge = 1000000000
 /api/v2/users/*/labeling/* = anon
 /api/v2/users/*/labeling = anon
 /api/v2/connect/*/master/administration = anon
-/api/v2/connect/*/master/sources/* = anon
-/api/v2/connect/*/master/sources/*/streams = anon
-/api/v2/connect/*/master/sources/*/streams/* = anon
+/api/v2/connect/*/master/sources/** = anon
 /api/v2/connect/*/master/resolvable/*/configurations = anon
 /api/openapi.json = anon
 /api/** = authcBearer, customFilter
