--- a/ui/package.json
+++ b/ui/package.json
@@ -60,7 +60,7 @@
     "jquery-ui-dist": "1.12.1",
     "jquery.panzoom": "2.0.5",
     "jshint": "2.11.1",
-    "jsplumb": "2.1.3",
+    "jsplumb": "^2.15.5",
     "jszip": "3.2.1",
     "konva": "3.2.4",
     "leaflet": "1.6.0",
@@ -74,6 +74,7 @@
     "ngx-auto-scroll": "^1.1.0",
     "ngx-color-picker": "9.0.0",
     "ngx-echarts": "^6.0.0",
+    "ngx-perfect-scrollbar": "^10.1.0",
     "ngx-quill": "12.0.1",
     "ngx-showdown": "5.1.0",
     "path": "^0.12.7",
