--- a/ui/package.json
+++ b/ui/package.json
@@ -35,6 +35,7 @@
     "@fortawesome/fontawesome-free": "5.12.1",
     "@ngx-loading-bar/core": "5.1.0",
     "@ngx-loading-bar/http-client": "5.1.0",
+    "@panzoom/panzoom": "^4.3.2",
     "@stomp/ng2-stompjs": "7.2.0",
     "@swimlane/ngx-charts": "16.0.0",
     "angular-datatables": "^10.0.0",
@@ -58,7 +59,6 @@
     "file-saver": "1.3.8",
     "jquery": "2.1.3",
     "jquery-ui-dist": "1.12.1",
-    "jquery.panzoom": "2.0.5",
     "jshint": "2.11.1",
     "jsplumb": "^2.15.5",
     "jszip": "3.2.1",
@@ -74,7 +74,6 @@
     "ngx-auto-scroll": "^1.1.0",
     "ngx-color-picker": "9.0.0",
     "ngx-echarts": "^6.0.0",
-    "ngx-perfect-scrollbar": "^10.1.0",
     "ngx-quill": "12.0.1",
     "ngx-showdown": "5.1.0",
     "path": "^0.12.7",
