updated name of connect-worker svc

--- a/k8s/templates/extensions/connect-adapters/connect-worker-service.yaml
+++ b/k8s/templates/extensions/connect-adapters/connect-worker-service.yaml
@@ -16,7 +16,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: connect-worker
+  name: connect-worker-main
 spec:
   selector:
     app: connect-worker
