[hotfix] change image tag scheme

--- a/cli/deploy/standalone/backend/docker-compose.yml
+++ b/cli/deploy/standalone/backend/docker-compose.yml
@@ -16,7 +16,7 @@
 version: "3.4"
 services:
   backend:
-    image: ${SP_DOCKER_REGISTRY}backend:${SP_VERSION}
+    image: ${SP_DOCKER_REGISTRY}/backend:${SP_VERSION}
     depends_on:
       - consul
       - couchdb
