--- a/cli/deploy/standalone/extensions-all-jvm/docker-compose.yml
+++ b/cli/deploy/standalone/extensions-all-jvm/docker-compose.yml
@@ -16,7 +16,7 @@
 version: "3.4"
 services:
   extensions-all-jvm:
-    image: ${SP_DOCKER_REGISTRY}extensions-all-jvm:${SP_VERSION}
+    image: ${SP_DOCKER_REGISTRY}/extensions-all-jvm:${SP_VERSION}
     depends_on:
       - consul
       - backend
