--- a/cli/deploy/standalone/sinks-databases-jvm/docker-compose.yml
+++ b/cli/deploy/standalone/sinks-databases-jvm/docker-compose.yml
@@ -16,7 +16,7 @@
 version: "3.4"
 services:
   sinks-databases-jvm:
-    image: ${SP_DOCKER_REGISTRY}sinks-databases-jvm:${SP_VERSION}
+    image: ${SP_DOCKER_REGISTRY}/sinks-databases-jvm:${SP_VERSION}
     depends_on:
       - "consul"
     logging:
