[STREAMPIPES-319] Remove URL from pipeline element descriptions, dynamically resolve pipeline element host via Consul

--- a/streampipes-backend/pom.xml
+++ b/streampipes-backend/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>streampipes-platform-services</artifactId>
             <version>0.68.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-service-discovery</artifactId>
+            <version>0.68.0-SNAPSHOT</version>
+        </dependency>
         <!-- External dependencies -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
