--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <commons-lang.version>2.3</commons-lang.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
         <commons-logging.version>1.2</commons-logging.version>
-        <consul-client.version>1.3.9</consul-client.version>
+        <consul-client.version>1.4.0</consul-client.version>
         <elasticsearch.version>6.6.2</elasticsearch.version>
         <empire-rdf4j.version>1.9.14</empire-rdf4j.version>
         <flink.version>1.9.1</flink.version>
@@ -938,6 +938,9 @@
         <module>streampipes-wrapper-spark</module>
         <module>streampipes-wrapper-standalone</module>
         <module>streampipes-data-explorer</module>
+        <module>streampipes-service-discovery</module>
+        <module>streampipes-service-discovery-consul</module>
+        <module>streampipes-service-discovery-api</module>
     </modules>
 
     <profiles>
