--- a/streampipes-container/pom.xml
+++ b/streampipes-container/pom.xml
@@ -52,16 +52,17 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.streampipes</groupId>
+			<artifactId>streampipes-service-discovery</artifactId>
+			<version>0.68.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.streampipes</groupId>
 			<artifactId>streampipes-rest-shared</artifactId>
 			<version>0.68.0-SNAPSHOT</version>
 		</dependency>
 
 
 		<!-- External dependencies -->
-		<dependency>
-			<groupId>com.orbitz.consul</groupId>
-			<artifactId>consul-client</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>javax.ws.rs-api</artifactId>
