--- a/streampipes-rest/pom.xml
+++ b/streampipes-rest/pom.xml
@@ -82,6 +82,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-service-discovery</artifactId>
+            <version>0.68.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-serializers-jsonld</artifactId>
             <version>0.68.0-SNAPSHOT</version>
         </dependency>
