removed ConsulConfig from node controller

--- a/streampipes-node-controller/pom.xml
+++ b/streampipes-node-controller/pom.xml
@@ -77,6 +77,11 @@
 
         <!--external dependencies-->
         <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <dependency>
             <groupId>com.spotify</groupId>
             <artifactId>docker-client</artifactId>
             <classifier>shaded</classifier>
